<?xml version="1.0"?>
<package format="2">
  <name>abtr_initial_pose</name>
  <version>0.0.1</version>
  <description>RViz /initialpose → Cartographer start_trajectory bridge</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cartographer_ros_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cartographer_ros_msgs</exec_depend>

</package>

